[package]
name = "iml"
version = "0.1.0"
authors = ["Ivan Temchenko <[ivan.vb030@simplelogin.com]>"]
description = "Inverted Microledger"
license = "Licensed under the EUPL-1.2-or-later"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
k256 = { version = "^0.13", features = [ "ecdsa", "serde" ] }
x25519-dalek = { version = "2.0.0", features = [ "static_secrets" ] }
chacha20poly1305 = "0.10.1"
blake3 = "1.2.0"
base64-url = "^2.0"
libflate = "^2.0"
zeroize = "^1.6"
rand = "^0.8"
thiserror = "^1"
arrayref = "^0.3"

