[package]
name = "iml"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
k256 = { version = "0.9", features = ["ecdsa"] }
blake3 = "1.2.0"
p256 = { version = "0.9.0", features = ["ecdsa"] }
chacha20poly1305 = "0.10.1"
anyhow = "1.0.40"
ecdsa = "0.12"
base64-url = "*"
libflate = "1"
